frontend/test/should_fail/index_exec_loop_edge_fromIndexSame_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	for{e:AEdge in edgesFromIndexSame(j, j); true }
}